# VoidMC

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  beta_test_plan.md  beta_test_plan.typst  cliff.toml  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  mirror.yml  release.yml
docs/: protocol-diff-1.21.4-to-26.1.2.md
void/: Cargo.toml
void-codec/: Cargo.toml
void-codec-macros/: Cargo.toml
void-codec-macros/src/: attrs.rs  decode.rs  encode.rs  lib.rs
void-codec/src/: lib.rs  primitives.rs
void-codec/src/primitives/: booleans.rs  containers.rs  fixed_length.rs  floats.rs  integers.rs  lp_vec3.rs  nbt.rs  uuid.rs  vari.rs  vari64.rs
void-codec/tests/: integration_test.rs
void-data/: Cargo.toml  build.rs
void-data/assets/26.1.2/: PROVENANCE.txt
void-data/scripts/: extract.sh  gen_entity_types.sh
void-data/src/: entity_types.rs  lib.rs
void-data/tests/: blocks.rs
void-docs/: README.md  package.json  rspress.config.ts
void-docs/docs/: README.md  _meta.json  index.md
void-docs/docs/architecture/: _meta.json  index.md  quality-standards.md  technology-evaluations.md
void-docs/docs/contributing/: _meta.json  code-of-conduct.md  index.md  license.md
void-docs/docs/guide/: _meta.json  development.md  getting-started.md  index.md  testing.md
void-docs/docs/performance/: _meta.json  benchmarking.md  index.md  metrics-results.md
void-docs/docs/reference/: _meta.json  data.md  index.md
void-docs/docs/reference/gameplay/: _meta.json  commands.md  players.md  registry.md  world.md
void-docs/docs/reference/protocol/: _meta.json  codec.md  networking.md
void-docs/docs/reference/protocol-specs/: _meta.json  index.md
void-docs/docs/reference/protocol-specs/v26.1.2/: _meta.json  chat.md  chunks.md  commands.md  configuration.md  connection-lifecycle.md  data-types.md  entities.md  entity-metadata.md  handshake.md  index.md  login.md  particle.md  play-clientbound.md  play-serverbound.md  registries.md  slot.md  status.md  tags.md  text-component.md
void-docs/docs/reference/server/: _meta.json  architecture.md  configuration.md  ecs.md  events.md
void-example/: Cargo.toml
void-example/src/: main.rs
void-net/: Cargo.toml
void-net/src/: client.rs  clientbound.rs  codec.rs  lib.rs  serverbound.rs  socket.rs
void-net/src/clientbound/: configuration.rs  login.rs  play.rs  status.rs
void-net/src/clientbound/configuration/: finish_configuration.rs  known_packs.rs  registry_data.rs
void-net/src/clientbound/login/: login_success.rs
void-net/src/clientbound/play/: chunk.rs  game_event.rs  login.rs  synchronize_player_position.rs
void-net/src/clientbound/status/: ping_response.rs  status_response.rs
void-net/src/serverbound/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
void-net/src/serverbound/configuration/: client_information.rs  finish_configuration_acknowledged.rs  known_packs.rs
void-net/src/serverbound/handshake/: handshake.rs
void-net/src/serverbound/login/: login_acknowledged.rs  login_start.rs
void-net/src/serverbound/play/: set_player_pos.rs  tick_end.rs
void-net/src/serverbound/status/: ping_request.rs  status_request.rs
void-protocol/: Cargo.toml
void-protocol/src/: clientbound.rs  codec.rs  lib.rs  serverbound.rs  types.rs
void-protocol/src/clientbound/: configuration.rs  login.rs  play.rs  status.rs
void-protocol/src/clientbound/configuration/: finish_configuration.rs  known_packs.rs  registry_data.rs  update_tags.rs
void-protocol/src/clientbound/login/: login_success.rs
void-protocol/src/clientbound/play/: block_changed_ack.rs  block_update.rs  chunk.rs  command_suggestions_response.rs  commands.rs  disconnect.rs  game_event.rs  keep_alive.rs  login.rs  ping.rs  player_info_remove.rs  player_info_update.rs  remove_entities.rs  set_center_chunk.rs  set_head_rotation.rs  spawn_entity.rs  synchronize_player_position.rs  system_chat.rs  unload_chunk.rs  update_entity_position.rs  update_entity_position_and_rotation.rs  update_entity_rotation.rs
void-protocol/src/clientbound/status/: ping_response.rs  status_response.rs
void-protocol/src/serverbound/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
void-protocol/src/serverbound/configuration/: client_information.rs  finish_configuration_acknowledged.rs  known_packs.rs  plugin_message.rs
void-protocol/src/serverbound/handshake/: handshake.rs
void-protocol/src/serverbound/login/: login_acknowledged.rs  login_start.rs
void-protocol/src/serverbound/play/: chat_command.rs  chat_command_unsigned.rs  chat_message.rs  client_information.rs  close_container.rs  command_suggestions_request.rs  confirm_teleportation.rs  interact.rs  keep_alive.rs  player_abilities.rs  player_action.rs  player_command.rs  player_loaded.rs  pong.rs  set_held_item.rs  set_player_pos.rs  set_player_pos_and_rot.rs  set_player_rotation.rs  signed_chat_command.rs  swing_arm.rs  tick_end.rs  use_item.rs  use_item_on.rs
void-protocol/src/serverbound/status/: ping_request.rs  status_request.rs
void-protocol/tests/: chunk_encoding.rs
void/src/: app.rs  client.rs  components.rs  config.rs  events.rs  game.rs  lib.rs  main.rs  metrics.rs  network.rs  plugins.rs  registry.rs  server.rs
void/src/client/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
void/src/commands/: defaults.rs  error.rs  flags.rs  mod.rs  parser.rs  plugin.rs
void/src/handlers/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
void/src/plugins/: chat.rs  configuration.rs  handshake.rs  interaction.rs  login.rs  movement.rs  play.rs  status.rs  world_interaction.rs
void/src/systems/: chunk.rs  circle.rs  keep_alive.rs  mod.rs  physics.rs  player.rs  position.rs  settle.rs  wander.rs
void/src/world/: chunk_entity.rs  chunk_pos.rs  dimension.rs  generation.rs  mod.rs
