[workspace]
resolver = "3"
members = [
  "void",
  "void-data",
  "void-example",
  "void-net",
  "void-protocol",
  "void-codec",
  "void-codec-macros"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/VoidMinecraft/VoidMC"
readme = "README.md"
authors = ["Adam Brutsaert", "Adam Cavillon", "Léo Dumont"]
keywords = ["minecraft", "server"]
