[package]
name = "voidmc-codec-macros"
edition = "2021"
description = "Procedural macro derives for the voidmc-codec encode/decode traits."
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
