[package]
name = "voidmc-data"
edition = "2024"
description = "Vanilla Minecraft registry data, extracted from Paper and embedded as NBT blobs at build time."
version = "0.1.0"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
ussr-nbt = "0.2.1"

[build-dependencies]
serde_json = "1.0"
ussr-nbt = "0.2.1"
