[package]
name = "void-net"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
ussr-nbt = { version = "0.2.1" }
uuid = "1.16.0"
