[package]
name = "void-net"
edition = "2024"
description = "Async networking layer for the VoidMC Minecraft server framework."
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
void-codec = { version = "0.1.0", path = "../void-codec" }
