[package]
name = "void-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
void-codec = { path = "../void-codec" }
void-codec-macros = { path = "../void-codec-macros" }
uuid = "1.16.0"
ussr-nbt = "0.2.1"
bitflags = "2.10.0"
