[package]
name = "void"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
void-net = { path = "../void-net" }
void-protocol = { path = "../void-protocol" }
uuid = { version = "1.16.0", features = ["v4"] }
ussr-nbt = "0.2.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
