[package]
name = "voidmc"
edition = "2024"
description = "Modular, ECS-driven Minecraft server framework written in Rust."
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
voidmc-net = { version = "0.1.0", path = "../void-net" }
voidmc-codec = { version = "0.1.0", path = "../void-codec" }
voidmc-protocol = { version = "0.1.0", path = "../void-protocol" }
voidmc-data = { version = "0.1.0", path = "../void-data" }
uuid = { version = "1.16.0", features = ["v4"] }
ussr-nbt = "0.2.1"
tracing = "0.1.44"
bevy_ecs = "0.18.0"
bevy_app = "0.18.0"
flume = "0.12.0"
